--- a/page.html
+++ b/page.html
@@ -4,8 +4,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="manifest" href="./manifest.webmanifest">
-    <link rel="service" href="./sw.js">   
+    <link rel="manifest" href="manifest.webmanifest">
+    <link rel="service" href="sw.js">   
 </head>
 <body>
     <h1>This is the Demo Page</h1>
